<resources>
    <string name="app_name">Shopping Buddy</string>
    <string name="title_search">Search</string>
    <string name="title_browse">Browse</string>
    <string name="title_list">Your List</string>
    <string name="title_more">More</string>
    <string name="title_account">Account</string>
    <string name="title_settings">Settings</string>

    <string name="com.twitter.sdk.android.CONSUMER_KEY">yv6poEeigtLQln0u4ReTzMOsX</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">mc7ur8qs0VSun6cLSrnASXHEJFhSVEMPR2G1Ppuxitq1aT43yK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
