<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_browse"
        android:icon="@drawable/ic_add_shopping_cart_black_24dp"
        android:title="@string/title_browse" />

    <item
        android:id="@+id/navigation_lists"
        android:icon="@drawable/ic_list_black_24dp"
        android:title="@string/title_list" />



    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_supervisor_account_black_24dp"
        android:title="@string/title_account" />
    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_more_horiz_black_24dp"
        android:title="@string/title_more" />




</menu>
